--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "konva": "^2.6.0",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "material-ui-search-bar-enhanced": "^0.5.1",
     "react": "^16.8.2",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-konva": "^16.8.2-0",
+    "react-scripts": "2.1.5",
+    "storm-react-diagrams": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
